<!-- Eng Lang -->
<resources>
    <!-- 1. Base -->
    <string name="app_name">KronoUI</string>

    <!-- 2. Cloud Firestore Collection Names -->
    <string name="collection_users">users</string>
    <string name="collection_plans">plans</string>
    <string name="collection_friends">friends</string>>
    <string name="collection_activities">activities</string>

    <!-- 3. Auth -->
    <string name="auth_welcome">Welcome</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_passwordConfirm">Confirm Password</string>
    <string name="auth_rememberMe">Remember Me</string>
    <string name="auth_forgotPassword">Forgot Password</string>
    <string name="auth_or">OR</string>
    <string name="auth_signin">Log In</string>
    <string name="auth_register">Register</string>
    <string name="auth_anonymousSignIn">Skip</string>
    <string name="auth_back">Back</string>

    <!-- 4. User Interface -->
    <string name="intent_plans">intent_plans</string>
    <string name="intent_activity">intent_activity</string>
    <string name="intent_friend">intent_friend</string>
    <string name="intent_friendList">intent_friendList</string>
    <string name="intent_location">location</string>

    <!-- 4.1 - Main Menu -->
    <string name="menu_allactivities">All Activities</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_plan">New Plan</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_searchButton">Search Button</string>

    <!-- 4.2 - Profile -->
    <string name="navigation_profileText">Profile</string>
    <string name="navigation_displayNameText">Display Name</string>
    <string name="navigation_emailFieldText">email@field.com</string>

    <!-- 4.3 - Plan -->
    <string name="plan_menu">Activity Menu</string>
    <string name="plan_details">Plan Details</string>
    <string name="plan_new">New Plan</string>
    <string name="plan_title">Title</string>
    <string name="plan_description">Description</string>
    <string name="plan_save">Save</string>

    <!-- 4.4 - Activity -->
    <string name="newactivity_header">New Activity</string>
    <string name="newactivity_title">Title</string>
    <string name="newactivity_description">Description</string>
    <string name="newactivity_timestamp">Pick a date</string>
    <string name="newactivity_location">Add Location</string>
    <string name="newactivity_repeat">Repeat</string>
    <string name="newactivity_save">Save</string>
    <string name="activitydetail_header">Edit Activity</string>
    <string name="permission_denied">
        Permission denied to access your current location.
        Please go to the app info page and allow the location permission to use this feature.
    </string>
    <string name="activitymap_myloc">My Location</string>
    <string name="activitymap_addloc">Add this Location</string>

    <!-- 4.5 Friend -->
    <string name="friendnew_hint">Search By Email</string>
    <string name="friendnew_done">Search</string>]

    <!-- 4.6 - Menu -->
    <string name="menu_activity">Activity Menu</string>
    <string name="menu_friend">Friend Menu</string>
    <string name="menu_FriendDetail">Friend Detail Menu</string>
    <string name="menu_sortBy">Sort By</string>
    <string name="activity_menu_editPlan">Edit Plan</string>
    <string name="activity_menu_sortBy">Sort By</string>
    <string name="activity_menu_deletePlan">Delete Plan</string>
    <string name="menu_activitydetail_editActivity">Edit Activity</string>
    <string name="menu_activitydetail_sortBy">Sort By</string>
    <string name="menu_activitydetail_deletePlan">Delete Activity</string>
    <string name="Menu_FriendDetail_RemoveFriend">Remove Friend</string>

</resources>
