<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_activity"
        app:showAsAction="always"
        android:icon="@drawable/menu_menu">
        <menu>
            <item android:id="@+id/activity_menu_sortBy"
                android:title="@string/activity_menu_sortBy"
                app:showAsAction="never"
                android:icon="@drawable/menu_sort"/>

            <item android:id="@+id/activity_menu_editPlan"
                android:title="@string/activity_menu_editPlan"
                app:showAsAction="ifRoom"
                android:icon="@drawable/menu_edit"/>

            <item android:id="@+id/activity_menu_deletePlan"
                android:title="@string/activity_menu_deletePlan"
                android:icon="@drawable/menu_delete"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>