<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/activity_all_menu_searchbutton"
        android:icon="@drawable/toolbar_searchbutton_white"
        android:title="@string/menu_searchButton"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:title="@string/menu_allactivities"
        app:showAsAction="always"
        android:icon="@drawable/menu_menu">
        <menu>
            <item android:id="@+id/allactivities_menu_sortBy"
                android:title="@string/menu_sortBy"
                app:showAsAction="never"
                android:icon="@drawable/menu_sort"/>
        </menu>
    </item>
</menu>