<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center"
    android:id="@+id/newactivity_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/newactivity_toolbar"/>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_buttonStartEndPadding"
            android:layout_marginBottom="@dimen/auth_buttonStartEndPadding"
            android:text="@string/newactivity_header"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newactivity_titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/auth_buttonBetweenPadding"
                android:hint="@string/newactivity_title"
                android:inputType="textShortMessage"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/newactivity_descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/auth_buttonBetweenPadding"
                android:hint="@string/newactivity_description"
                android:inputType="textShortMessage"
                android:maxLines="5"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/newactivity_dueDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/auth_buttonBetweenPadding"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:focusable="true"
                android:hint="@string/newactivity_timestamp"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/newactivity_addLocEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/auth_buttonStartEndPadding"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:focusable="true"
                android:hint="Add Location"
                android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/WhiteFAB"
        android:src="@drawable/ui_activity_done"
        android:id="@+id/newactivity_fab"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>